# to-anki

./: .gitignore  Anki.py  Cleaner.py  In Treatment - 1x02 - Alex - Week One.0TV.en.srt  Pipfile  README.md  pyproject.toml  requirements.txt  run.py  words_to_anki.py
src/: app.py  config.py
src/anki/: anki.py  card.py  cleaner.py  english_card.py
tests/: test_cleaner.py
